--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,6 +22,9 @@
                         <li><a class="nav-link" href="/profile">Profile</a></li>
                         <li><a class="nav-link" href="/logout">Log out</a></li>
                     <%}%>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/delete">Edit Account</a>
+                    </li>
                 </ul>
             </div>
         </nav>
