--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -3,28 +3,31 @@
 
 <head>
     <% include partials/header %>
+    <% include partials/navbar %>
 <!--    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
 <!--    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
 <!--    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
 </head>
 
 <body>
-    <% include partials/navbar %>
-<form action="/delete" method="post">
-    <table class="table table-borderless">
+  
+<div class="edit text-center animated fadeIn">
+    <form action="/delete" method="post">
+    <table class="table table-borderless ">
         <tbody>
         <tr>
-            <td style="color: white">Are you sure you want to delete account?</td>
+            <td style="color: black">Are you sure you want to delete account?</td>
         </tr>
         <tr>
             <td>
-                <button type="submit" class="btn btn-danger float-center">Delete</button>
-                <a href="/" class="btn btn-secondary float-center">Cancel</a>
+                <button type="submit text-center" class="col-md-4 btn btn-danger float-center my-auto">Delete</button>
+                <a href="/" class=" col-sm-4 btn btn-secondary float-center my-auto">Cancel</a>
             </td>
         </tr>
         </tbody>
     </table>
 </form>
+</div>
 
 
 
