index took out extra text and edited our recipes page

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,7 @@ body{
     background: linear-gradient(to bottom, #FFB88C, #DE6262); 
     color: white;
     border: none;
+    margin:5px;
 }
 
 
