--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+  <div class="container">
 <div class="edit text-center animated fadeIn">
     <form action="/delete" method="post">
     <table class="table table-borderless ">
@@ -27,6 +27,7 @@
         </tbody>
     </table>
 </form>
+</div>
 </div>
 
 
