--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,14 +16,14 @@
         
         <div class="row">
             <div class="col-sm m-2 tileBackground text-center animated fadeInLeft">
-                <p class="m-2">Description</p>
+                <p class="m-2"></p>
                 <button id="loadIngredients" type="button" class="btn btn-primary" data-toggle="modal" data-target="#ingredientModal">
                     Search by Ingredient
                 </button>
             </div>
 
             <div class="col-sm m-2 tileBackground text-center animated fadeInDown">
-                <p class="m-2">Description</p>
+                <p class="m-2"></p>
                 <form name="searchByDietForm" action="/search">
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="dietOptions" id="pescatarianRadio" value="pescetarian" required>
@@ -54,7 +54,7 @@
             </div>
             
             <div class="col-sm m-2 tileBackground text-center animated fadeInRight">
-                <p class="m-2">Description</p>
+                <p class="m-2"></p>
                 <form class="form" name="searchByNameForm" action="/search">
                     <div class="form-group mb-2">
                         <input id="recipeName" type="text" class="form-control mb-2" placeholder="Chicken Salad" name="recipeName" required>
