--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -8,16 +8,16 @@
 </head>
     
 <body>
-    
+    <div class="container">
     <div class="text-center animated fadeInLeft">
         <button type='button' class='btn btn-primary sort' value="ASC"> Sort Recipes by Ascending Likes</button>
         <button type='button' class='btn btn-primary sort' value="DESC"> Sort Recipes by Descending Likes</button>
     </div>
     <div id="recipes" class="text-center animated bounce">
         <% for(var i=0; i<results.length; i++) {%>
-            <div class='m-5 tileBackground animated fadeIn'>
+            <div class='container animated fadeIn'>
                <button type='button' class='btn btn-primary recipeSummary' value="<%= results[i].recipe_name %>"> <%= results[i].recipe_name %></button>
-               <h3 class="text-white">Likes: <%= results[i].likes %></h3>
+               <h3 class=" text-white">Likes: <%= results[i].likes %></h3>
                <img src="<%= results[i].image %>" width="25%">
             </div>
         <% } %>
